--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.1",
+    "@google/generative-ai": "^0.21.0",
     "@headlessui/react": "^2.2.0",
     "@types/recharts": "^1.8.29",
     "framer-motion": "^11.13.5",
     "lucide-react": "^0.344.0",
+    "openai": "^4.76.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
